im about to try something

--- a/deploy/index.html
+++ b/deploy/index.html
@@ -153,7 +153,7 @@
             
             <ul>
             
-                <li id="regions-list">
+                <li id="regions-list" class="beach">
                 <div id="region-1">
                     <h1>SHORE</h1>
                     <div>
