--- a/deploy/index.html
+++ b/deploy/index.html
@@ -36,7 +36,7 @@
     
                 <nav id="nav-container" data-nav="main-navigation">
                     <ul>
-                        <li><a href="#why-NJ" class="nav-btns">Why NJ?</a></li>
+                        <li><a href="#why-nj" class="nav-btns">Why NJ?</a></li>
                         <li><a href="#regions" class="nav-btns">Regions</a></li>
                         <li><a href="#places-to-visit" class="nav-btns">Places to Visit</a></li>
                         <li><a href="#places-to-stay" class="nav-btns">Places to Stay</a></li>
@@ -582,7 +582,7 @@
                             </li>
                         </ul>
                     </section>
-    <section id="dining">
+    <section id="dining-and-shopping">
                             <ul>
                                 <li id="ds-title">
                                     <h1>DINING AND SHOPPING</h1>
